--- a/Develop/package.json
+++ b/Develop/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "lite-server": "lite-server",
-    "webpack": "webpack --watch",
-    "build": "npm run webpack"
+    "lite-server": "lite-server"
   },
   "repository": {
     "type": "git",
@@ -21,17 +19,10 @@
   },
   "homepage": "https://github.com/coding-boot-camp/unit18hw#readme",
   "dependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
-    "babel": "^6.23.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-dynamic-import-webpack": "^1.1.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "lite-server": "^2.5.3",
     "mongoose": "^5.5.15",
-    "morgan": "^1.9.1",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
+    "morgan": "^1.9.1"
   }
 }
